<resources>
    <string name="app_name">Hearth Failure</string>
    <string name="new_evaluation_title">New Evaluation</string>
    <string name="new_evaluation_description">Create new evaluation for a patient</string>
    <string name="saved_evaluation_title">Saved Evaluations</string>
    <string name="saved_evaluation_desription">View and edit previously saved evaluations</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_up">Sign In/Up</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="development">DEVELOPMENT</string>
    <string name="version_caps">VERSION</string>
    <string name="version">Version %1$s</string>
    <string name="logic">Logic</string>
    <string name="engineering">Engineering</string>
    <string name="design">Design</string>
    <string name="logic_dev_name">Demir Baykal</string>
    <string name="engineering_dev_name">Gurkan Sokat</string>
    <string name="designer_name">Alphonso Jordan</string>
    <string name="compute_evaluation">Compute Evaluation</string>
    <string name="heart_check">Heart Check</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="bio_required">Bio Required</string>
    <string name="bio_alert_desc">Please complete the bio section before moving forward.</string>
    <string name="go_to_bio">Go to Bio</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="cancel_evaluation_popup_title">Cancel Evaluation?</string>
    <string name="cancel_evaluation_popup_description">Are you sure you want to cancel this evaluation?</string>
    <string name="yes_im_sure">Yes, I\'m sure</string>
    <string name="bio">Bio</string>
    <string name="symptoms">Symptoms</string>
    <string name="physical_exam">Physical Exam</string>
    <string name="cv_profile">Current/Past CV Profile</string>
    <string name="cv_risk">Major CV Risk Factors</string>
    <string name="laboratories">Laboratories</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="po_meds">PO Meds</string>
    <string name="in_hospital_therapies">In Hospital/IV Therapies</string>
    <string name="heart_specialist_management">Heart Specialist Management</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="heart_rate">Heart rate</string>
    <string name="sbp">SBP</string>
    <string name="dbp">DBP</string>
    <string name="name_hint">Enter Patient Name</string>
    <string name="age_hint">Enter Patient age</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="refer_to_heart_failure_spec">Refer to Heart Failure Specialist for management?</string>
    <string name="ask_if_user_wants_to_saved_evaluation">Do you want to save this evaluation?</string>
    <string name="yes">YES</string>
    <string name="not_now">NOT NOW</string>
    <string name="dyspnea">Dyspnea</string>
    <string name="chest_pain">Chest Pain</string>
    <string name="etiology">Etiology</string>
    <string name="syncope_presyncope">Syncope/Presyncope</string>
    <string name="heart_failure">Heart Failure</string>
    <string name="coronary_heart_disease">Coronary Heart Disease</string>
    <string name="atrial_fibrilation">Atrial Fibrillation</string>
    <string name="thromboembolic_vka">Thromboembolic/VKA</string>
    <string name="ventricular_tachyarrthymias">Ventricular Tachyarrthymias</string>
    <string name="bradyarrthymia_syncope">Bradyarrthymia/Syncope</string>
    <string name="valvular_heart_disease">Valvular Heart Disease</string>
    <string name="valvular_heart_disease_thromboembolic">Valvular Heart Disease\n Thromboembolic Prevention\nand\nTherapy</string>
    <string name="pulmonary_hypertension">Pulmonary Hypertension</string>
    <string name="vascular_diseases">Vascular Diseases</string>
    <string name="evaluation">Evaluation</string>
    <string name="outpatient">Outpatient</string>
    <string name="emergency_room">Emergency Room</string>
    <string name="in_hospital">In Hospital</string>
    <string name="acutely_decompensated_hospitalized">Acutely Decompensated / Hospitalized</string>
    <string name="day1">Day 1</string>
    <string name="day2">Day 2</string>
    <string name="day3">Day 3</string>
    <string name="day4">Day 4</string>
    <string name="day5">Day 5</string>
    <string name="day6">Day 6</string>
    <string name="pre_discharge_or_discharge_day">Pre-discharge or Discharge Day</string>
    <string name="discharge_therapeutics">Discharge Therapeutics</string>
    <string name="clinical_presentation">Clinical Presentation</string>
    <string name="please_select_one">Please Select One</string>
    <string name="new_hf">New Onset/Suspected HF</string>
    <string name="dyspnea_on_exertion">Dyspnea on Exertion, not at Rest</string>
    <string name="strenuous_exertion">Strenuous Exertion</string>
    <string name="more_than_daily_routine">More than Daily Routine</string>
    <string name="daily_routine_minimal_activities">Daily Routine / Minimal Activities</string>
    <string name="dyspnea_at_rest">Dyspnea at Rest/Orthopnea</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="beta_blocker">Beta Blocker</string>
    <string name="previous_hf_hospitalization">Previous HF Hospitalization</string>
    <string name="s_p_icd">S/P ICD</string>
    <string name="nyha_class">NYHA Class</string>
    <string name="at_high_risk">At High Risk for HF, but wthout Structural Heart Disease or Symptoms of HF NYHA/CCVS Class 0</string>
    <string name="no_signs_of_hf">Structural Heart Disease, but without signs/symptoms of HF</string>
    <string name="symptoms_of_hf">Structural Heart Disease with prior or current symptoms of HF</string>
    <string name="refractory_hf">Refractory HF Requiring Specialized Interventions</string>
    <string name="nyha_ccvs_class_1">NYHA/CCVS Class 1</string>
    <string name="nyha_ccvs_class_2">NYHA/CCVS Class 2</string>
    <string name="nyha_ccvs_class_3">NYHA/CCVS Class 3</string>
    <string name="nyha_ccvs_class_4">NYHA/CCVS Class 4</string>
    <string name="two_typical_or_probable_angina"><![CDATA[> 2 Typical or Probable Angina]]></string>
    <string name="typical_or_probable_angina_more_20_min"><![CDATA[Typical or Probable Angina > 20 min]]></string>
    <string name="asa_use_in_past_1_week">ASA Use in Past 1 Week</string>
    <string name="positive_trop_i_or_t">Positive Trop I or T</string>
    <string name="typical_angina_new">Typical Angina, New</string>
    <string name="probably_angina_new">Probably Angina, New</string>
    <string name="undetermined_cp_new">Undetermined CP, New</string>
    <string name="side_hemithorax">Side/Hemithorax</string>
    <string name="quality">Quality</string>
    <string name="sharp">Sharp</string>
    <string name="pressure">Pressure</string>
    <string name="tightness">Tightness</string>
    <string name="soreness">Soreness</string>
    <string name="heaviness">Heaviness</string>
    <string name="aggravated_by">Aggravated By</string>
    <string name="lying">Lying</string>
    <string name="breathing">Breathing</string>
    <string name="coughing">Coughing</string>
    <string name="exertion">Exertion</string>
    <string name="palpation">Palpation</string>
    <string name="relieved_by">Relieved By</string>
    <string name="ntg">NTG</string>
    <string name="rest">Rest</string>
    <string name="sitting_up">Sitting-Up</string>
    <string name="lying_on_side">Lying On-Side</string>
    <string name="analgesics">Analgesics</string>
    <string name="radiation">Radiation</string>
    <string name="jaw">Jaw</string>
    <string name="back">Back</string>
    <string name="arm">Arm</string>
    <string name="nausea">Nausea</string>
    <string name="diaphoresis">Diaphoresis</string>
    <string name="faintness">Faintness</string>
    <string name="unable_to_exercise">Unable to Exercise</string>
    <string name="circumstance">Circumstance</string>
    <string name="upright_position">Upright Position, Post Exertion</string>
    <string name="sudden_noise">Sudden noise or emotion</string>
    <string name="neck_movement_manipulation">Neck movement, Manipulation</string>
    <string name="exertional">Exertional</string>
    <string name="prodromal_symptoms">Prodromal Symptoms</string>
    <string name="aura">Aura</string>
    <string name="dizziness">Dizziness</string>
    <string name="palpitations">Palpitations</string>
    <string name="syncope_duration_during_syncope">Syncope Duration/During Syncope</string>
    <string name="cyanosis">Cyanosis</string>
    <string name="aha_stage">AHA Stage</string>
    <string name="pallor_diaphoresis">Pallor, Diaphoresis</string>
    <string name="unusual_posture">Unusual Posture</string>
    <string name="postictal_symptoms">Postictal Symptoms</string>
    <string name="disorientation">Disorientation</string>
    <string name="paralysis">Paralysis</string>
    <string name="prolonged_fatigue">Prolonged Fatigue</string>
    <string name="intercostal_cp">Intercostal CP</string>
    <string name="central_precordial_cp">Central/Precordial CP</string>
    <string name="hf_diagnosis_duration_week">HF Diagnosis Duration/Week</string>
    <string name="value">Value</string>
    <string name="lvef">LVEF</string>
    <string name="hepatojuluar_reflux">Hepatojulular Reflux</string>
    <string name="jugular_venous_distention">Jugular Venous Distention</string>
    <string name="displaced_pmi">Displaced PMI</string>
    <string name="friction_rub">Friction Rub</string>
    <string name="heart_murmur">Heart Murmur</string>
    <string name="new_rales">New Rales</string>
    <string name="pulmonary_edema">Pulmonary Edema</string>
    <string name="diminished_breath_sounds">Diminished Breath Sounds</string>
    <string name="abdominal_tenderness">Abdominal Tenderness</string>
    <string name="any_cns_symptoms">Any CNS Symptoms</string>
    <string name="cold_clammy_extremities">Cold Clammy Extremities</string>
    <string name="cold_clammy_extermities">Cold Clammy Extermities</string>
    <string name="edema">Edema</string>
    <string name="edema_ascites">Edema/Ascites</string>
    <string name="left_sided_gallop">Left Sided Gallop</string>
    <string name="difference_in_sbp">Difference in SBP</string>
    <string name="focus_on_the_most_abnormal_auscultation_foci">Focus on the most abnormal auscultation foci</string>
    <string name="si_mitral">SI Mitral</string>
    <string name="loud">Loud</string>
    <string name="normal">Normal</string>
    <string name="soft">Soft</string>
    <string name="s2_aortic">S2 Aortic</string>
    <string name="p2_pulmonic">P2 Pulmonic</string>
    <string name="systolic_murmur">Systolic Murmur</string>
    <string name="colon">:</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="duration">Duration</string>
    <string name="heart_specialist_partner">Heart Specialist Partner</string>
    <string name="hours">Hours</string>
    <string name="view_more_specialists">View more specialists in your area</string>
    <string name="auth_title">You will receive a text message with a verification code</string>
    <string name="auth_hint">Please enter your verification code</string>
    <string name="submit">Submit</string>
    <string name="contact_admin">Cannot Sign In? - Contact Administrator</string>
</resources>