<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ffffff"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_title"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>


        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_hint" />
        </android.support.design.widget.TextInputLayout>

        <com.szg_tech.hearthfailure.core.views.CustomTextView
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="75dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/blue_button_selector"
            android:text="@string/submit"
            android:gravity="center"
            android:minHeight="44dp"
            app:type="tag" />

        <TextView android:id="@+id/link_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/contact_admin"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>