<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:minHeight="@dimen/icon_cell_height"
    app:cardCornerRadius="0dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/section_bg_highlight"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/icon_cell_padding_bottom"
        android:paddingEnd="@dimen/cell_padding_right"
        android:paddingStart="@dimen/cell_padding_left"
        android:paddingTop="@dimen/icon_cell_padding_top">

        <com.szg_tech.hearthfailure.core.views.CustomTextView
            android:id="@+id/title_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/duration"
            app:type="body_placeholder" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <com.szg_tech.hearthfailure.core.views.CustomEditText
                android:id="@+id/minutes_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical|end"
                android:hint="@string/minutes"
                android:inputType="number"
                android:maxLength="2"
                app:type="input_right" />

            <com.szg_tech.hearthfailure.core.views.CustomTextView
                android:id="@+id/separator_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center_vertical"
                android:text="@string/colon"
                app:type="body_placeholder" />

            <com.szg_tech.hearthfailure.core.views.CustomEditText
                android:id="@+id/seconds_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical|start"
                android:hint="@string/seconds"
                android:inputType="number"
                android:maxLength="2"
                app:type="input_right" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>