<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="19dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="19dp"
    android:minHeight="312dp"
    android:orientation="vertical"
    app:cardCornerRadius="0dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        app:cardCornerRadius="0dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:background="@color/section_bg_highlight">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="17dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:src="@drawable/heart_partner" />

                <com.szg_tech.hearthfailure.core.views.CustomTextView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/heart_specialist_partner"
                    app:type="body2" />

                <ImageView
                    android:id="@+id/context_menu_button"
                    android:layout_width="12dp"
                    android:layout_height="@dimen/icon_height"
                    android:src="@drawable/more_vertical" />
            </LinearLayout>

            <com.szg_tech.hearthfailure.core.views.CustomTextView
                android:id="@+id/department_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                app:type="title_left" />

            <com.szg_tech.hearthfailure.core.views.CustomTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:type="body_placeholder" />

            <com.szg_tech.hearthfailure.core.views.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/hours" />

            <com.szg_tech.hearthfailure.core.views.CustomTextView
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/view_more_specialists_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_cell_height"
        android:background="@color/section_bg_highlight"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/arrow_fwd" />

        <com.szg_tech.hearthfailure.core.views.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="17dp"
            android:gravity="center_vertical"
            android:text="@string/view_more_specialists" />
    </LinearLayout>
</LinearLayout>